@@ -1,5 +1,7 @@
 package com.wellsfargo.bankapp.controller;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.wellsfargo.bankapp.entity.Transaction;
 import com.wellsfargo.bankapp.entity.account.SavingsAccount;
 import com.wellsfargo.bankapp.service.CustomerService;
@@ -20,26 +22,35 @@ public class SavingsAccountController {
     @Autowired
     SavingsAccountService savingsAccountService;
 
+    private final ObjectMapper objectMapper = new ObjectMapper();
+
     @PostMapping
-    public ResponseEntity<String> createSavingsAccount(@RequestBody Map<String, Object> jsonObj) throws Exception {
-        Object customerId = jsonObj.get("customerId");
-        Object depositAmount = jsonObj.get("depositAmount");
-        savingsAccountService.createSavingsAccount(new Long(customerId.toString()), new Double(depositAmount.toString()));
-        return new ResponseEntity<>("Savings Account created successfully.", HttpStatus.OK);
+    public ResponseEntity<String> createSavingsAccount(@RequestBody String createSavingsRequest) throws Exception {
+        JsonNode createSavingsRequestNode = objectMapper.readTree(createSavingsRequest);
+        Long customerId = createSavingsRequestNode.get("customerId").asLong();
+        double depositAmount = createSavingsRequestNode.get("depositAmount").asDouble();
+        int status = savingsAccountService.createSavingsAccount(customerId, depositAmount);
+        if(status == 0){
+            return new ResponseEntity<>("Customer not found.", HttpStatus.NOT_FOUND);
+        }
+        else if(status == 1){
+            return new ResponseEntity<>("Savings Account created successfully.", HttpStatus.OK);
+        }
+        else {
+            return new ResponseEntity<>("Deposit amount has to be more than minimum balance.", HttpStatus.NOT_ACCEPTABLE);
+        }
     }
 
-    @ResponseBody
-    @GetMapping(path="{id}")
-    public List<Transaction> getTransactionHistory(@PathVariable("id") String id) throws Exception {
-        Optional<SavingsAccount> savingsAccountOp = savingsAccountService.findSavingsAccountById(new Long(id));
-        if(savingsAccountOp.isPresent()){
-            SavingsAccount savingsAccount = savingsAccountOp.get();
-            List<Transaction> history = savingsAccount.getCreditTransactions();
-            return history;
+    @GetMapping("/{id}")
+    public ResponseEntity<SavingsAccount> getSavingsAccountDetails(@PathVariable("id") String id){
+        Optional<SavingsAccount> savingsAccountByIdOp = savingsAccountService.findSavingsAccountById(Long.valueOf(id));
+        if (!savingsAccountByIdOp.isPresent()) {
+            return ResponseEntity
+                    .status(HttpStatus.NOT_FOUND)
+                    .build();
         }
-        else{
-            throw new Exception("Account not found.");
-        }
+        SavingsAccount savingsAccountById = savingsAccountByIdOp.get();
+        return ResponseEntity.status(HttpStatus.OK).body(savingsAccountById);
     }
 
 }
